--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ BOT_TOKEN=7219812639:AAGuIEMoSS_sgaoRU3_0K_ULOLwtkt9omgM
 BIG_ADMIN=1041847396
 ADMINS=1041847396
 
-DB_USER=postgres
-DB_PASS=postgres
-DB_NAME=private
+DB_USER=postgreszomroboni
+DB_PASS=postgreszomro1990
+DB_NAME=atexpressdb
 DB_HOST=localhost
